# EditAlly

./: .gitignore  README.md  _instructions.py  editally.py  main.py  makefile  pyproject.toml  streamlit_app.py
