[tool.poetry]
name = "editally"
version = "0.1.0"
description = ""
authors = ["Jim Gibbs <jamesvgibbs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
openai = "^1.3.9"
nltk = "^3.8.1"
python-dotenv = "^1.0.0"
streamlit = "^1.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
